--- a/index.html
+++ b/index.html
@@ -1,25 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <base href="/">
+    <base href="$FLUTTER_BASE_HREF">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="László Szabó's portfolio page.">
+    <title>László Szabó \| Software Engineer Portfolio</title>
+    <meta name="description"
+          content="Portfolio of László Szabó, software engineer. Explore projects, experience, and contact information.">
+    <meta name="author" content="László Szabó">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://lezli01.is-a.dev/">
 
-  <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="lezli01">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="László Szabó \| Software Engineer Portfolio">
+    <meta property="og:description"
+          content="Software engineer portfolio showcasing projects and experience.">
+    <meta property="og:url" content="https://lezli01.is-a.dev/">
+    <meta property="og:image" content="https://lezli01.is-a.dev/icons/Icon-192.png">
+    <meta property="og:site_name" content="lezli01">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.ico"/>
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="László Szabó \| Software Engineer Portfolio">
+    <meta name="twitter:description"
+          content="Portfolio highlighting projects and experience as a software engineer.">
+    <meta name="twitter:image" content="https://lezli01.is-a.dev/icons/Icon-192.png">
 
-  <title>lezli01</title>
-  <link rel="manifest" href="manifest.json">
+    <!-- PWA / iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="lezli01">
+    <meta name="theme-color" content="#000000">
+    <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+
+    <!-- Manifest -->
+    <link rel="manifest" href="manifest.json">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "László Szabó",
+            "url": "https://lezli01.is-a.dev/",
+            "jobTitle": "Software Engineer",
+            "description": "Software engineer portfolio showcasing projects and experience.",
+            "image": "https://lezli01.is-a.dev/icons/Icon-192.png",
+            "sameAs": [
+                "https://github.com/lezli01"
+            ]
+        }
+    </script>
 </head>
 <body>
-  <script src="flutter_bootstrap.js?v=6" async></script>
+<noscript>This site requires JavaScript to run the Flutter app. Please enable JavaScript.</noscript>
+<script src="flutter_bootstrap.js?v=6" async></script>
 </body>
 </html>
