added webmaster tools

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="1njbNkJPHV46MIT33uL35Q" async></script>
+
     <base href="$FLUTTER_BASE_HREF">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
